# infra

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .trivyignore.yaml  CONTRIBUTING.md  Makefile  README.md  aqua.yaml  fix.py  mise.toml  renovate.json5  trivy.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/scripts/: check-automerge.py  gen-fluxcd-kustomize.sh  gen-namespaces.sh
.github/workflows/: auto-gen.yaml  badge.yaml  badges.yaml  flux-auto-pr.yaml  gen-namespace.yaml  images.yaml  k8s.yaml  renovate.yaml  scan.yaml  security-scan.yaml  snapshot-diff.yaml  snapshot.yaml  terraform-trigger.yaml  update-flux.yaml
docs/: GO_DEPRECATION.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_DECISION.md  MIGRATION_GUIDE.md  QUALITY_SUMMARY.md
hardware/machine/: alice.yaml  template.yaml
images/netbox/: Dockerfile  (+1 more)
k8s/: .gitignore  Makefile  README.md  argo.md  chartfile.yaml  go.mod  go.sum  init.md  jsonnetfile.lock.json  main.go
scripts/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/infrautil/: .gitignore  __init__.py  cli.py  config.py  go.mod  go.sum  helmSnapshotCmd.go  logging_config.py  main.go  namespaceCmd.go  snapshotCmd.go
scripts/infrautil/commands/: __init__.py  namespace.py  snapshot.py
scripts/infrautil/lib/: __init__.py  apps.go  apps.py  helm.go  helmyaml.go  jsonnet.go  jsonnet.py  namespace.go  namespace.py  namespace_test.go
scripts/infrautil/lib/testfiles/: deployment.jsonnet  deployment.yaml  ingress.jsonnet  ingress.yaml  pvc.yaml  service.jsonnet  service.yaml
scripts/infrautil/lib/testfiles/components/: labels.libsonnet
scripts/infrautil/tests/: __init__.py  test_jsonnet.py  test_namespace.py
terraform/: .gitignore  .terraform.lock.hcl  _variables.tf  aws.tf  b2.tf  cloudflare.tf  dummy  main.tf  minio.tf  oci.tf  seaweedfs.tf  terraform_cloud.tf  zitadel.tf  zitadel_import.tf
(+3541 files in other folders)
